# LR8

Task_1/: CMakeLists.txt  Combines_headers.h  elastic_search.c  functions.c  main.c  product.h
Task_2/: CMakeLists.txt  Combined_headers.h  book.c  book_struct.h  elastic_search.c  main.c
